--- a/stylesheet/main.css
+++ b/stylesheet/main.css
@@ -1,10 +1,31 @@
+::-webkit-scrollbar{
+    width: 5px;
+}
+
+::-webkit-scrollbar-track {
+    background: #707070; 
+    border-radius: 20px;
+  }
+   
+  ::-webkit-scrollbar-thumb {
+    background: #FFFF33; 
+    border-radius: 20px;
+  }
+  
+  ::-webkit-scrollbar-thumb:hover {
+    background: #d6d621; 
+  }
+
 *{
-    font-family: 'Noto Sans Symbols 2', sans-serif;
+    font-family: 'EB Garamond', serif;
     margin: 0px;
     padding: 0px;
+    scroll-behavior: smooth;
+    user-select: none;
 }
 body{
     background-color: black;
+
 }
 .wrapper{
     height: auto;
@@ -20,6 +41,7 @@ body{
     overflow: hidden;
     position: absolute;
     box-shadow: 0px 1px 15px #86868656;
+    -webkit-box-shadow: 0px 1px 15px #86868656;
 }
 
 .nav_content_container{
@@ -27,6 +49,8 @@ body{
     font-size: 17.55px;
     color: #FFFF33;
     padding-left: 20px;
+    font-weight: bold;
+    text-align: right;
 }
 
 .nav_menu_bars{ display: none; }
@@ -64,18 +88,29 @@ body{
 
 
 
-.logo_container{
+.logo_container a{
     width: fit-content;
     height: fit-content;
     align-content: center;
+    font-family: "flood-std", regular;
+    text-decoration: none;
+    color: #FFFF33;
+    font-size: 25px;
     margin: auto;
-    padding-top: 6px;
+    padding-top: 18px;
     padding-left: 10px;
+    padding-right: 10px;
     float: left;
+    cursor: pointer;
+    user-select: none;
 }
 .content_container{
-    background-color: rgb(0, 0, 0);
-    height: max-content;
+    min-height: 700px;
+    background-position: var(--x) var(--y);
+    background-image: url('/assests/image/bgcircle.png');
+    background-repeat: no-repeat;
+    background-size: 100%;
+    transition-duration: 0.1s;
 }
 
 .coming_soon{
@@ -94,7 +129,7 @@ body{
     margin: auto;
     width: 50%;
     font-size: 20px;
-    font-family: 'Noto Sans Symbols 2', sans-serif;
+    font-family: 'Noto Sans Symbols p', sans-serif;
     text-align: center;
     user-select: none;
 }
@@ -117,28 +152,41 @@ body{
     from, to { color: transparent }
     50% { color: white }
 }
+
 .sidebar{
-    height: 1000px;
+    height: 100%;
     float: left;
-    background-color: #07050596;
-    transition-duration: 1s;
-    text-align: left;
-    padding-left: 20px;
+    background-color: transparent;
+    transition-duration: 0.5s;
+    text-align: center;
     font-size: 25px;
+    width: 100%;
+    overflow: hidden;
   }
   .sidebar li{
+    margin: auto;
     list-style: none;
     padding-top: 4.1em;
+    width: 70%;
   }
   .sidebar a{
+
     text-decoration: none;
     color: #FFFF33;
+  }
+
+  .sidebar ol{
+    border-bottom: #ffff33 solid;
+    border-width: 2px;
+    padding: 20px;
   }
 
 @media only screen and (max-width: 600px){
     .nav_content_container{
         display: none;
     }
+    
+
 
     .nav_menu_bars{
         padding-top: 10px;
@@ -148,19 +196,11 @@ body{
         color: #FFFF33;
     }
     .content_container{
-        height: 1000px;
+        min-height: 1000px;
+        height: 100%;
+        background: transparent;
     }
 }
 
-@media only screen and (max-width: 500px){
-    .coming_soon{
-        padding-top: 20%;
-        font-family: 'Train One';
-        font-size: 50px;
-        color: #FFFF33;
-        text-align: center;
-        user-select: none;
-    }
 
 
-}
