--- a/stylesheet/about.css
+++ b/stylesheet/about.css
@@ -12,7 +12,7 @@
 .about_sub_container{
     width: 48%;
     padding: 20px;
-    font-size: 20px;
+    font-size: clamp(20px, 1.1vw, 40px);
     text-align: justify;
     padding-top: 4rem;
 }
@@ -53,7 +53,8 @@
 
 .about_heading_container{
     color: #FFFF33;
-    font-size: 40px;
+    font-size: clamp(40px, 2.5vw, 80px);
+    padding-bottom: 10px;
     font-family: 'Quicksand', sans-serif;
 }
 
@@ -87,7 +88,7 @@
 .our_team_heading{
     color: #FFFF33;
     text-align: center;
-    font-size: 50px;  
+    font-size: clamp(40px, 3.14vw, 90px);
     font-family: 'Quicksand', sans-serif;  
 }
 
@@ -132,23 +133,27 @@
 .overlay{
     position: fixed; 
     z-index: 1;
-    padding-top: 100px; 
-    left: 0;
+    padding: 3px;
+    right: 0;
+    left: 0 ; 
     top: 0;
+    bottom: 0;
     width: 100%;
-    height: 100%; 
+    height: 1000px; 
     overflow: hidden; 
     background-color: rgba(0, 0, 0, 0.5); 
 }
 .popup {
     background-color: #000000;
     margin: auto;
-    padding: 10px;
     border-radius: 10px;
-    max-width: 1000px;
+    max-width: 70%;
+    margin-top: 13vh;
+    margin-bottom: 13vh;
     width: auto;
     overflow: hidden; 
-    height: 500px;
+    height: auto;
+    width: auto;
     z-index: 2;
     flex-wrap: wrap;
     box-shadow: 0px 0px 50px 2px #Ffdf00;
@@ -164,6 +169,7 @@
 }
 
 .close {
+    padding-right: 10px;
     color: #aaaaaa;
     float: right;
     margin-top: 5px;
@@ -206,24 +212,26 @@
 
 .about_info_name{
     color: #Ffdf00;
-    font-size: 40px;
+    font-size: clamp(30px, 1.5vw, 80px);
     text-align: center;
 }
 
 .about_info_designation{
     color: #949494;
     text-align: center;
-    font-size: 20px;
-    padding-top: 10px;
+    font-size: clamp(24px, 1vw, 80px);
+    padding-top: 5px;
 }
 
 .about_info_descripton{
     text-align: justify;
+    font-size: clamp(19px, 1vw, 40px);
     padding: 20px;
 }
 
 .about_info_descripton_adv{
-    font-size: 20px;
+    padding-top: 5px;
+    font-size: clamp(13.8px, 1.2vw, 40px);
     text-align: justify;
 }
 
@@ -232,10 +240,11 @@
     padding-bottom: 10px;
     text-align: center;
     color: #Ffdf00;
-    font-size: 25px;
+    font-size: clamp(25px, 2.2vw, 45px);
 }
 .about_info_word{
     font-family: 'Yellowtail';
+    font-size: clamp(15px, 1.5vw, 45px);
 }
 .about_info_content a{
     color: #f8f8f8;
@@ -244,11 +253,16 @@
 
 .about_info_content{
     text-align: center;
-    font-size: 23px;
+    font-size: clamp(20px, 1.3vw, 40px);
 }
 @media only screen and (max-width: 1244px) {
-    .our_team_heading{
-        font-size: 45px;
+    .popup{
+        max-width: 93%;
+        margin-top: 13vh;
+        margin-bottom: 0;
+        height: auto;
+        width: auto;
+        padding-bottom: 20px;
     }
     .about_content_container{
         padding-left: 20px;
@@ -303,7 +317,6 @@
         display: block;
     }
 .about_info_descripton_adv{
-    font-size: 15px;
     text-align: justify;
     padding-left: 20px;
 }
@@ -322,7 +335,6 @@
     }
     .about_info_descripton{
         text-align: justify;
-        font-size: 28px;
         margin-right: -20px;
     }
     .about_info_social a{
@@ -350,7 +362,7 @@
 @media only screen and (max-width: 600px){
 
     .about_sub_container{
-        width: 100%;
+        width: auto;
         padding: 0;
         margin: auto;
         background-color: #0000007c;
@@ -360,7 +372,6 @@
         text-align: center;
     }
     .about_heading_container{
-        
         text-align: center;
     }
     
@@ -376,7 +387,6 @@
     }
     .about_info_descripton{
         text-align: justify;
-        font-size: 18px;
         margin-right: -20px;
     }
     .about_info_social a{
