--- a/stylesheet/about.css
+++ b/stylesheet/about.css
@@ -1,414 +1,1 @@
-.about_content_wrapper{
-    width: 100%;
-    margin: auto;
-    padding-top: 4.3rem;
-    margin-bottom: 10%;  
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    overflow: hidden;
-}
-
-.about_sub_container{
-    width: 48%;
-    padding: 20px;
-    font-size: clamp(20px, 1.1vw, 40px);
-    text-align: justify;
-    padding-top: 4rem;
-}
-
-.image_container{
-    padding-top: 5em;
-}
-
-.image_container_get_together{
-    padding: 0px;
-    padding-top: 5em;
-}
-
-
-.image_container_get_together img{
-    width: 100%;
-    animation-name: float;
-    animation-duration: 5s;
-    animation-iteration-count: infinite;
-    animation-timing-function: ease-out;
-}
-
-.image_container img{
-    animation-name: float;
-    animation-duration: 5s;
-    animation-iteration-count: infinite;
-    animation-timing-function: ease-out;
-}
-
-
-._pc{
-    display: block;
-}
-
-._mobile{
-    display: none;
-}
-
-.about_heading_container{
-    color: #FFFF33;
-    font-size: clamp(40px, 2.5vw, 80px);
-    padding-bottom: 10px;
-    font-family: 'Quicksand', sans-serif;
-}
-
-.about_content_container{
-    color: #fff;
-    font-family: 'Rajdhani', sans-serif;
-    font-weight: bold;
-}
-
-@keyframes float {
-    0%{ 
-        transform: translate(0, 0px); 
-    }
-    50%{
-        transform: translate(0, 15px);
-    }
-    75%{
-        transform: translate(0, -15px);
-    }
-    100%{
-        transform: translate(0, 0px);
-    }
-}
-
-
-.bottom_container{
-    background-color:transparent;
-    color:white;
-}
-
-.our_team_heading{
-    color: #FFFF33;
-    text-align: center;
-    font-size: clamp(40px, 3.14vw, 90px);
-    font-family: 'Quicksand', sans-serif;  
-}
-
-.card_wrapper{
-    margin: auto;
-    width: 80%;
-    padding: 10px;
-    padding-top: 5.3rem;
-    padding-bottom: 3rem;
-    color: white;
- }
- 
- .card_founder_wrapper{
-    margin-left: 5%;
-    margin-right: 5%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-
- }
- .card_founders{
-    width: 200px; 
-    overflow: hidden;
-    margin-bottom: 50px;
-    transition-duration: 0.7s;
-    -webkit-box-reflect:below 1px linear-gradient(transparent,transparent, #0001);
-}
-
-.card_founders:hover{
-    scale:1.1;
-}
-
- .card_founders img{
-    width: 100%;
-    border-radius: 100%;
- }
-
- .card_founders img:hover{
-    opacity: 100%;
- }
-
-.overlay{
-    position: fixed; 
-    z-index: 1;
-    padding: 3px;
-    right: 0;
-    left: 0 ; 
-    top: 0;
-    bottom: 0;
-    width: 100%;
-    height: 1000px; 
-    overflow: hidden; 
-    background-color: rgba(0, 0, 0, 0.5); 
-}
-.popup {
-    background-color: #000000;
-    margin: auto;
-    border-radius: 10px;
-    max-width: 70%;
-    margin-top: 13vh;
-    margin-bottom: 13vh;
-    width: auto;
-    overflow: hidden; 
-    height: auto;
-    width: auto;
-    z-index: 2;
-    flex-wrap: wrap;
-    box-shadow: 0px 0px 50px 2px #Ffdf00;
-    -webkit-box-shadow: 0px 0px 10px 2px #ffdf00;
-    color: #ffffff;
-}
-._pc{
-    display: block;
-}
-
-._mobile{
-    display: none;
-}
-
-.close {
-    padding-right: 10px;
-    color: #aaaaaa;
-    float: right;
-    margin-top: 5px;
-    margin-right: 10px;
-    font-size: 28px;
-    font-weight: bold;
-}
-
-.close:hover, .close:focus {
-  color: #ffffff;
-  text-decoration: none;
-  cursor: pointer;
-}
-
-.about_info{
-    display: flex;
-}
-
-.about_info_content{
-    margin: auto;
-    padding: 20px;
-    height: 450px;
-}
-
-.about_info_img{
-    margin: auto;
-    width: 30%;
-    height: 100%;
-}
-
-.about_info_img img{
-    width: 100%;
-    height: 100%;
-    border-radius: 10px;
-}
-
-.about_info_content{
-    width: 50%;
-}
-
-.about_info_name{
-    color: #Ffdf00;
-    font-size: clamp(30px, 1.5vw, 80px);
-    text-align: center;
-}
-
-.about_info_designation{
-    color: #949494;
-    text-align: center;
-    font-size: clamp(24px, 1vw, 80px);
-    padding-top: 5px;
-}
-
-.about_info_descripton{
-    text-align: justify;
-    font-size: clamp(19px, 1vw, 40px);
-    padding: 20px;
-}
-
-.about_info_descripton_adv{
-    padding-top: 5px;
-    font-size: clamp(13.8px, 1.2vw, 40px);
-    text-align: justify;
-}
-
-.about_info_heading{
-    padding-top: 10px;
-    padding-bottom: 10px;
-    text-align: center;
-    color: #Ffdf00;
-    font-size: clamp(25px, 2.2vw, 45px);
-}
-.about_info_word{
-    font-family: 'Yellowtail';
-    font-size: clamp(15px, 1.5vw, 45px);
-}
-.about_info_content a{
-    color: #f8f8f8;
-    padding: 10px;
-}
-
-.about_info_content{
-    text-align: center;
-    font-size: clamp(20px, 1.3vw, 40px);
-}
-@media only screen and (max-width: 1244px) {
-    .popup{
-        max-width: 93%;
-        margin-top: 13vh;
-        margin-bottom: 0;
-        height: auto;
-        width: auto;
-        padding-bottom: 20px;
-    }
-    .about_content_container{
-        padding-left: 20px;
-        padding-right: 20px;
-    }
-    .card_founders{
-        margin-bottom: 10px;
-        padding-bottom: 10px;
-    }
-    .card_founders img{
-        scale: 0.8;
-    }
-    .card_founders:last-child{
-        margin-bottom: 0px;
-    }
-    .image_container_get_together{
-        padding: 20px;
-        padding-top: 4.3em;
-        margin: auto;
-        width: 100%;
-        overflow: hidden;
-    }
-    .image_container_get_together img{
-        text-align: center;
-        width: 100%;
-        scale: 0.8;
-        
-        height: 5%;
-    }
-    .about_sub_container{
-        width: 100%;
-    }
-
-    .image_container img{
-        padding: 0;
-        width: 100%;
-        scale: 1;
-    
-    }
-    .image_container{
-        width: 100%;
-        text-align: center;
-        margin-top: 4em;
-        margin-bottom: 4em;
-    
-    }
-    ._pc{
-        display: none;
-    }
-    
-    ._mobile{
-        display: block;
-    }
-.about_info_descripton_adv{
-    text-align: justify;
-    padding-left: 20px;
-}
-    
-}
-
-@media only screen and (max-width: 820px) {
-    .about_info_img{
-        display: none;
-    }
-    .about_info_content{
-        text-align: center;
-        width: 100%;
-        font-size: 30px;
-        
-    }
-    .about_info_descripton{
-        text-align: justify;
-        margin-right: -20px;
-    }
-    .about_info_social a{
-        color: #f8f8f8;
-        padding-left: 20px;
-    }
-    .about_info_name{
-        margin-right: -20px;
-    }
-    .about_info_designation{
-        margin-right: -20px;
-    }
-    .about_info_descripton{
-        margin-right: -20px;
-    }
-    .about_info_heading{
-        margin-right: -20px;
-        padding-bottom: 10px;
-    }
-    .about_info_word{
-        margin-right: -20px;
-    }
-}
-
-@media only screen and (max-width: 600px){
-
-    .about_sub_container{
-        width: auto;
-        padding: 0;
-        margin: auto;
-        background-color: #0000007c;
-    }   
-    .image_container{
-        padding: 0px;
-        text-align: center;
-    }
-    .about_heading_container{
-        text-align: center;
-    }
-    
-    .about_info_img{
-        display: none;
-    }
-
-    .about_info_content{
-        text-align: center;
-        width: 100%;
-        font-size: 20px;
-        
-    }
-    .about_info_descripton{
-        text-align: justify;
-        margin-right: -20px;
-    }
-    .about_info_social a{
-        color: #f8f8f8;
-        padding-left: 20px;
-    }
-    .about_info_name{
-        margin-right: -20px;
-    }
-    .about_info_designation{
-        margin-right: -20px;
-    }
-    .about_info_descripton{
-        margin-right: -20px;
-    }
-    .about_info_heading{
-        margin-right: -20px;
-        padding-bottom: 10px;
-    }
-    .about_info_word{
-        margin-right: -20px;
-    }
-}
-
- 
+.image_container img,.image_container_get_together img{animation-name:float;animation-duration:5s;animation-iteration-count:infinite;animation-timing-function:ease-out}.card_founders,.overlay,.popup{overflow:hidden}.about_content_wrapper{width:100%;margin:auto auto 10%;padding-top:4.3rem;display:flex;flex-wrap:wrap;justify-content:space-between;overflow:hidden}.about_sub_container{width:48%;padding:4rem 20px 20px;font-size:clamp(20px, 1.1vw, 40px);text-align:justify}.image_container{padding-top:5em}.image_container_get_together{padding:5em 0 0}.image_container_get_together img{width:100%}.about_heading_container{color:#ff3;font-size:clamp(40px, 2.5vw, 80px);padding-bottom:10px;font-family:Quicksand,sans-serif}.about_content_container{color:#fff;font-family:Rajdhani,sans-serif;font-weight:700}@keyframes float{0%,100%{transform:translate(0,0)}50%{transform:translate(0,15px)}75%{transform:translate(0,-15px)}}.bottom_container{background-color:transparent;color:#fff}.our_team_heading{color:#ff3;text-align:center;font-size:clamp(40px, 3.14vw, 90px);font-family:Quicksand,sans-serif}.card_wrapper{margin:auto;width:80%;padding:5.3rem 10px 3rem;color:#fff}.card_founder_wrapper{margin-left:5%;margin-right:5%;display:flex;flex-wrap:wrap;justify-content:space-evenly}.card_founders{width:200px;margin-bottom:50px;transition-duration:.7s;-webkit-box-reflect:below 1px linear-gradient(transparent,transparent,#0001)}.card_founders:hover{scale:1.1}.card_founders img{width:100%;border-radius:100%}.card_founders img:hover{opacity:100%}.overlay{position:fixed;z-index:1;padding:3px;right:0;left:0;top:0;bottom:0;width:100%;height:1000px;background-color:rgba(0,0,0,.5)}.popup{background-color:#000;margin:13vh auto;border-radius:10px;max-width:70%;height:auto;width:auto;z-index:2;flex-wrap:wrap;box-shadow:0 0 50px 2px #ffdf00;-webkit-box-shadow:0 0 10px 2px #ffdf00;color:#fff}._pc{display:block}._mobile{display:none}.close{padding-right:10px;color:#aaa;float:right;margin-top:5px;margin-right:10px;font-size:28px;font-weight:700}.close:focus,.close:hover{color:#fff;text-decoration:none;cursor:pointer}.about_info{display:flex}.about_info_content{margin:auto;padding:20px;height:450px}.about_info_img{margin:auto;width:30%;height:100%}.about_info_img img{width:100%;height:100%;border-radius:10px}.about_info_name{color:#ffdf00;font-size:clamp(30px, 1.5vw, 80px);text-align:center}.about_info_designation{color:#949494;text-align:center;font-size:clamp(24px, 1vw, 80px);padding-top:5px}.about_info_descripton{text-align:justify;font-size:clamp(19px, 1vw, 40px);padding:20px}.about_info_descripton_adv{padding-top:5px;font-size:clamp(13.8px, 1.2vw, 40px);text-align:justify}.about_info_heading{padding-top:10px;padding-bottom:10px;text-align:center;color:#ffdf00;font-size:clamp(25px, 2.2vw, 45px)}.about_info_word{font-family:Yellowtail;font-size:clamp(15px, 1.5vw, 45px)}.about_info_content a{color:#f8f8f8;padding:10px}.about_info_content{width:50%;text-align:center;font-size:clamp(20px, 1.3vw, 40px)}@media only screen and (max-width:1244px){.card_founders:last-child,.popup{margin-bottom:0}.popup{max-width:93%;margin-top:13vh;height:auto;width:auto;padding-bottom:20px}.about_content_container{padding-left:20px;padding-right:20px}.card_founders{margin-bottom:10px;padding-bottom:10px}.card_founders img{scale:0.8}.image_container_get_together{padding:4.3em 20px 20px;margin:auto;width:100%;overflow:hidden}.image_container_get_together img{text-align:center;width:100%;scale:0.8;height:5%}.about_sub_container{width:100%}.image_container img{padding:0;width:100%;scale:1}.image_container{width:100%;text-align:center;margin-top:4em;margin-bottom:4em}._pc{display:none}._mobile{display:block}.about_info_descripton_adv{text-align:justify;padding-left:20px}}@media only screen and (max-width:820px){.about_info_img{display:none}.about_info_content{text-align:center;width:100%;font-size:30px}.about_info_descripton{text-align:justify}.about_info_social a{color:#f8f8f8;padding-left:20px}.about_info_descripton,.about_info_designation,.about_info_name,.about_info_word{margin-right:-20px}.about_info_heading{margin-right:-20px;padding-bottom:10px}}@media only screen and (max-width:600px){.about_heading_container,.image_container{text-align:center}.about_sub_container{width:auto;padding:0;margin:auto;background-color:#0000007c}.image_container{padding:0}.about_info_img{display:none}.about_info_content{text-align:center;width:100%;font-size:20px}.about_info_descripton{text-align:justify}.about_info_social a{color:#f8f8f8;padding-left:20px}.about_info_descripton,.about_info_designation,.about_info_name,.about_info_word{margin-right:-20px}.about_info_heading{margin-right:-20px;padding-bottom:10px}}
