--- a/stylesheet/faq.css
+++ b/stylesheet/faq.css
@@ -1,121 +1,1 @@
-.content_desc_heading{  
-    padding: 20px;
-    padding-top: 4.3rem;
-    color: #ffff33;
-    font-size: 40px;
-    margin: auto;
-    text-align: center;
-    text-transform: capitalize;
-    font-family: 'Quicksand', sans-serif;
-}
-.content_desc{
-    padding: 20px;
-    color: #fff;
-    font-size: 20px;
-    margin: auto;
-}
-
-.question_container{
-    margin: auto;
-    overflow: hidden;
-    margin-bottom: 70px;
-}
-
-.questions_container_questions{
-    width: 85%;
-    margin: auto;
-}
-
-.collapse{
-    outline:none;  
-    color: #000000;
-    background: #ffff33;
-    cursor: pointer;
-    padding: 10px;
-    width: 100%;
-    font-size: 20px;
-    border: none;
-    border-bottom: 1px #000000 solid;
-    text-align: left;
-    margin-bottom: 4px;
-    font-family: 'Jost', sans-serif;
-    font-weight: bolder;
-}
-
-.collapse_content{
-    max-height: 0;
-    color: #ffffff;
-    transition: max-height 0.2s ease-out;
-    padding: 0 23px;
-    padding-bottom: 0px;
-    margin-bottom: 5px;
-    font-size: 18px;
-    border: none;
-    overflow: hidden;
-    font-family: 'Jost', sans-serif;
-}
-
-.active, .collapse:hover {
-    background-color: #ffffff;
-  }
-
-.caret {
-    width: 0;
-    height: 0;
-    margin-top: 12px;
-    margin-left: 20px;
-    float: right;
-    border-top: 6px dashed;
-    border-top: 6px solid \9;
-    border-right: 6px solid transparent;
-    border-left: 6px solid transparent;
-}
-
-.contact_us_wrapper{
-    background-color: transparent;
-    margin:auto;
-    padding: 50px;
-}
-.contact_us_heading{
-    color: #ffff33;
-    font-size: 50px;
-    text-align: center;
-}
-
-.contact_container{
-    height: 200px;
-    padding: 60px;
-    width: 50%;
-    margin: auto;
-    margin-top: 1em;
-}
-
-.contact_items_wrapper{
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    
-}
-
-.contact_content{
-    font-size: 20px;
-}
-.contact_icon{
-    font-size: 20px;
-    padding-right: 30px;
-}
-
-.contact_list{
-    padding-left: 130px;
-    list-style: none;
-    line-height: 2.5;
-    margin: auto;
-}
-
-@media only screen and (max-width: 800px){
-    .contact_items_wrapper{flex-wrap: nowrap;}
-    .contact_content{padding-top: 4px;font-size: 16px; justify-content: left;}
-    .contact_us_wrapper{padding: 0px;}
-    .contact_container{ padding-left: 0px;padding-right: 0px;margin: 0px;margin-bottom: 5em;margin-left: 15px;}
-    .contact_list{ padding-left: 0px;width: 100%;}
-}
+.content_desc_heading{padding:4.3rem 20px 20px;color:#ff3;font-size:40px;margin:auto;text-align:center;text-transform:capitalize;font-family:Quicksand,sans-serif}.collapse,.collapse_content{font-family:Jost,sans-serif}.content_desc{padding:20px;color:#fff;font-size:20px;margin:auto}.question_container{margin:auto auto 70px;overflow:hidden}.questions_container_questions{width:85%;margin:auto}.collapse{outline:0;color:#000;background:#ff3;cursor:pointer;padding:10px;width:100%;font-size:20px;border:none;border-bottom:1px solid #000;text-align:left;margin-bottom:4px;font-weight:bolder}.collapse_content{max-height:0;color:#fff;transition:max-height .2s ease-out;padding:0 23px;margin-bottom:5px;font-size:18px;border:none;overflow:hidden}.active,.collapse:hover{background-color:#fff}.caret{width:0;height:0;margin-top:12px;margin-left:20px;float:right;border-top:6px dashed;border-right:6px solid transparent;border-left:6px solid transparent}.contact_us_wrapper{background-color:transparent;margin:auto;padding:50px}.contact_us_heading{color:#ff3;font-size:50px;text-align:center}.contact_content,.contact_icon{font-size:20px}.contact_container{height:200px;padding:60px;width:50%;margin:1em auto auto}.contact_items_wrapper{display:flex;flex-wrap:wrap;flex-direction:row}.contact_icon{padding-right:30px}.contact_list{padding-left:130px;list-style:none;line-height:2.5;margin:auto}@media only screen and (max-width:800px){.contact_items_wrapper{flex-wrap:nowrap}.contact_content{padding-top:4px;font-size:16px;justify-content:left}.contact_us_wrapper{padding:0}.contact_container{padding-left:0;padding-right:0;margin:0 0 5em 15px}.contact_list{padding-left:0;width:100%}}
