--- a/stylesheet/footer.css
+++ b/stylesheet/footer.css
@@ -1,80 +1,1 @@
-.footer_container{
-    background-color: black;
-    color: #fff;
-    padding: 15px;
-    padding-top: 5px;
-    height: 20px;
-    box-shadow: 0 0 15px 1px #86868656;
-    -webkit-box-shadow: 0 0 15px 1px #86868656;
-    position: relative;
-}
-.footer_content_left{
-    font-family: 'Lucida Sans Unicode', 'Lucida Grande';
-    font-size: 12px;
-    padding-top: 10px;
-    padding-left: 50px;
-    float: left;
-}
-
-.footer_content_center{
-    font-family: 'Lucida Sans Unicode', 'Lucida Grande';
-    font-size: 12px;
-    padding-top: 10px;
-    text-align: center;
-}
-
-.footer_content_right{
-    font-family: 'Lucida Sans Unicode', 'Lucida Grande';
-    font-size: 12px;
-    text-align: right;
-    padding-top: 10px;
-    padding-right: 50px;
-    float: right;
-}
-
-.footer_content_right i{
-    font-size: 20px;
-    padding-left: 20px;
-}
-
-.footer_content_right i:hover{
-    color: #fff333;
-}
-
-.footer_content_right a{
-    text-decoration: none;
-    color: #fff;
-}
-
-@media only screen and (max-width: 600px){
-    .footer_content_right i{
-        font-size: 20px;
-        padding-right: 10px;
-    }
-    .footer_container{
-        background-color: black;
-        color: #fff;
-        padding: 15px;
-        padding-top: 5px;
-        height: 20%;
-        bottom: 0;
-        box-shadow: 0 0 15px 1px #86868656;
-        -webkit-box-shadow: 0 0 15px 1px #86868656;
-    }
-    .footer_content_center {
-        float: none;
-        padding: 10px;
-        text-align: center;
-    }
-    .footer_content_left {
-        float: none;
-        padding: 10px;
-        text-align: center;
-    }
-    .footer_content_right {
-        float: none;
-        padding: 0;
-        padding: 10px;
-        text-align: center;
-    }
-}
+.footer_container{background-color:#000;color:#fff;padding:5px 15px 15px;height:20px;box-shadow:0 0 15px 1px #86868656;-webkit-box-shadow:0 0 15px 1px #86868656;position:relative}.footer_content_center,.footer_content_left,.footer_content_right{font-family:'Lucida Sans Unicode','Lucida Grande';font-size:12px;padding-top:10px}.footer_content_left{padding-left:50px;float:left}.footer_content_center{text-align:center}.footer_content_right{text-align:right;padding-right:50px;float:right}.footer_content_right i{font-size:20px;padding-left:20px}.footer_content_right i:hover{color:#fff333}.footer_content_right a{text-decoration:none;color:#fff}@media only screen and (max-width:600px){.footer_content_right i{font-size:20px;padding-right:10px}.footer_container{background-color:#000;color:#fff;padding:5px 15px 15px;height:20%;bottom:0;box-shadow:0 0 15px 1px #86868656;-webkit-box-shadow:0 0 15px 1px #86868656}.footer_content_center,.footer_content_left,.footer_content_right{float:none;padding:10px;text-align:center}}
