--- a/stylesheet/contact.css
+++ b/stylesheet/contact.css
@@ -1,9 +1,1 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-#contact{
-    box-shadow: 0px 0px 50px 2px rgba(255, 255, 255, 0.5);
-    -webkit-box-shadow: 0px 0px 50px 2px rgba(255, 255, 255, 0.5);
-}
-
+@tailwind base;@tailwind components;@tailwind utilities;#contact{box-shadow:0 0 50px 2px rgba(255,255,255,.5);-webkit-box-shadow:0 0 50px 2px rgba(255,255,255,.5)}
