--- a/stylesheet/main.css
+++ b/stylesheet/main.css
@@ -1,203 +1,1 @@
-::-webkit-scrollbar{
-    width: 5px;
-}
-
-::-webkit-scrollbar-track {
-    background: #707070; 
-    border-radius: 20px;
-  }
-   
-  ::-webkit-scrollbar-thumb {
-    background: #FFFF33; 
-    border-radius: 20px;
-  }
-  
-  ::-webkit-scrollbar-thumb:hover {
-    background: #d6d621; 
-  }
-
-*{
-    font-family: 'EB Garamond', serif;
-    margin: 0px;
-    padding: 0px;
-    scroll-behavior: smooth;
-    user-select: none;
-}
-body{
-    background-color: black;
-
-}
-.wrapper{
-    height: auto;
-    width: auto;
-}
-
-.nav_container{
-    user-select: none;
-    height: 3.5rem;
-    background-color: rgb(2, 2, 2);
-    margin: auto;
-    width: 100%;
-    overflow: hidden;
-    position: absolute;
-    box-shadow: 0px 1px 15px #86868656;
-    -webkit-box-shadow: 0px 1px 15px #86868656;
-}
-
-.nav_content_container{
-    padding-top: 20px;
-    font-size: 17.55px;
-    color: #FFFF33;
-    padding-left: 20px;
-    font-weight: bold;
-    text-align: right;
-}
-
-.nav_menu_bars{ display: none; }
-
-.nav_content_container a{
-    text-decoration: none;
-    color: #FFFF33;
-    margin: 15px;
-}
-
-.nav_content_container a:hover{
-    color: #ffffff;
-    border-bottom: solid #FFFF33;
-}
-
-.bar1, .bar2, .bar3 {
-    width: 35px;
-    height: 5px;
-    background-color: #FFFF33;
-    top: 0;
-    margin: 6px 0;
-    transition: 0.4s;
-}
-
-
-.change .bar1 {
-    transform: translate(0, 11px) rotate(-45deg);
-  }
-  
-  .change .bar2 {opacity: 0;}
-  
-  .change .bar3 {
-    transform: translate(0, -11px) rotate(45deg);
-  }
-
-
-
-.logo_container a{
-    width: fit-content;
-    height: fit-content;
-    align-content: center;
-    font-family: "flood-std", regular;
-    text-decoration: none;
-    color: #FFFF33;
-    font-size: 25px;
-    margin: auto;
-    padding-top: 18px;
-    padding-left: 10px;
-    padding-right: 10px;
-    float: left;
-    cursor: pointer;
-    user-select: none;
-}
-.content_container{
-    min-height: 700px;
-    background-size: 100%;
-    transition-duration: 0.1s;
-}
-
-.coming_soon{
-    padding-top: 20%;
-    font-family: 'Train One';
-    font-size: 100px;
-    color: #FFFF33;
-    text-align: center;
-    user-select: none;
-}
-
-.coming_soon_sub_heading{
-    color: white;
-    padding-top: 10px;
-    padding-bottom: 22%;
-    margin: auto;
-    width: 50%;
-    font-size: 20px;
-    font-family: 'Noto Sans Symbols p', sans-serif;
-    text-align: center;
-    user-select: none;
-}
-
-.cursor{
-    color: white;
-}
-
-.coming_soon_sub_heading::after{
-    content: "|";
-    font-size: 150%;
-    line-height: 30px;
-}
-
-.blink_cursor::after{
-    animation: blink .75s step-end infinite;
-}
-
-@keyframes blink {
-    from, to { color: transparent }
-    50% { color: white }
-}
-
-.sidebar{
-    height: 100%;
-    float: left;
-    background-color: transparent;
-    transition-duration: 0.5s;
-    text-align: center;
-    font-size: 25px;
-    width: 100%;
-    overflow: hidden;
-  }
-  .sidebar li{
-    margin: auto;
-    list-style: none;
-    padding-top: 4.1em;
-    width: 70%;
-  }
-  .sidebar a{
-
-    text-decoration: none;
-    color: #FFFF33;
-  }
-
-  .sidebar ol{
-    border-bottom: #ffff33 solid;
-    border-width: 2px;
-    padding: 20px;
-  }
-
-@media only screen and (max-width: 600px){
-    .nav_content_container{
-        display: none;
-    }
-    
-
-
-    .nav_menu_bars{
-        padding-top: 10px;
-        padding-right: 10px;
-        float: right;
-        display: block;
-        color: #FFFF33;
-    }
-    .content_container{
-        min-height: 1000px;
-        height: 100%;
-        background: transparent;
-    }
-}
-
-
-
+*,.coming_soon,.logo_container a,.nav_container{user-select:none}.logo_container a,.nav_content_container a,.sidebar a{text-decoration:none;color:#ff3}::-webkit-scrollbar{width:5px}::-webkit-scrollbar-track{background:#707070;border-radius:20px}::-webkit-scrollbar-thumb{background:#ff3;border-radius:20px}::-webkit-scrollbar-thumb:hover{background:#d6d621}*{font-family:'EB Garamond',serif;margin:0;padding:0;scroll-behavior:smooth}body{background-color:#000}.wrapper{height:auto;width:auto}.nav_container{height:3.5rem;background-color:#020202;margin:auto;width:100%;overflow:hidden;position:absolute;box-shadow:0 1px 15px #86868656;-webkit-box-shadow:0 1px 15px #86868656}.nav_content_container{padding-top:20px;font-size:17.55px;color:#ff3;padding-left:20px;font-weight:700;text-align:right}.nav_menu_bars{display:none}.nav_content_container a{margin:15px}.nav_content_container a:hover{color:#fff;border-bottom:solid #ff3}.bar1,.bar2,.bar3{width:35px;height:5px;background-color:#ff3;top:0;margin:6px 0;transition:.4s}.change .bar1{transform:translate(0,11px) rotate(-45deg)}.change .bar2{opacity:0}.change .bar3{transform:translate(0,-11px) rotate(45deg)}.logo_container a{width:fit-content;height:fit-content;align-content:center;font-family:flood-std,regular;font-size:25px;margin:auto;padding-top:18px;padding-left:10px;padding-right:10px;float:left;cursor:pointer}.content_container{min-height:700px;background-size:100%;transition-duration:.1s}.coming_soon{padding-top:20%;font-family:'Train One';font-size:100px;color:#ff3;text-align:center}.coming_soon_sub_heading{color:#fff;padding-top:10px;padding-bottom:22%;margin:auto;width:50%;font-size:20px;font-family:'Noto Sans Symbols p',sans-serif;text-align:center;user-select:none}.cursor{color:#fff}.coming_soon_sub_heading::after{content:"|";font-size:150%;line-height:30px}.blink_cursor::after{animation:.75s step-end infinite blink}@keyframes blink{from,to{color:transparent}50%{color:#fff}}.sidebar{height:100%;float:left;background-color:transparent;transition-duration:.5s;text-align:center;font-size:25px;width:100%;overflow:hidden}.sidebar li{margin:auto;list-style:none;padding-top:4.1em;width:70%}.sidebar ol{border-bottom:solid #ff3;border-width:2px;padding:20px}@media only screen and (max-width:600px){.nav_content_container{display:none}.nav_menu_bars{padding-top:10px;padding-right:10px;float:right;display:block;color:#ff3}.content_container{min-height:1000px;height:100%;background:0 0}}
